--- a/index.html
+++ b/index.html
@@ -16,8 +16,101 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<!-- 1: titolo -->
+				<section>
+					<h1>L'edizione</h1>
+					<h3>Una panoramica delle soluzioni esistenti e dei requisiti essenziali</h2>
+					<p>Chiara Martignano</p>
+
+				</section>
+
+				<!-- 2: Introduzione e indice -->
+				<section>
+					<h4>Argomenti</h4>
+					<ul>
+						<li>Attuale panorama degli strumenti disponibili</li>
+						<li>Piccolo censimento delle edizioni digitali di testi letterari in italiano antico</li>
+						<li>Proposta di buone pratiche e dei requisiti essenziali</li>
+					</ul>
+				</section>
+
+				<!-- 3: Produzione vs pubblicazione -->
+				<section>
+					<section>
+						<h4>1. sistemi di edizione vs sistemi di produzione</h4>
+					</section>
+					<section>
+						<img src="./img/Schema_Leonardi.png" alt="Lino Leonardi's scheme for digital and traditional philology"></img>
+					</section>
+					<section>
+						<img src="./img/Schema_sistemi_di_edizione_1.png" alt="Lino Leonardi's scheme reviseted to show how tools for publishing digital editions work"></img>
+					</section>						
+					<section>
+						<p>Esempio: <a href="https://dcl.ils.indiana.edu/petrarchive/index.php">Petrarchive</a>, <a href="https://dcl.ils.indiana.edu/teibp/">TEI Boilerplate</a></p>
+						<img src="./img/petrarchive_edition.png" alt="Screenshot of the digital edition 'Petrarchive'"></img>
+					</section>
+					<section>	
+						<img src="./img/Schema_sistemi_di_edizione_2.png" alt="Lino Leonardi's scheme reviseted to show how tools for digital editing work"></img>
+					</section>
+					<section>
+						<img src="./img/Schema_sistemi_di_edizione_3.png" alt="Lino Leonardi's scheme reviseted to show how tools for authoring and publishing digital editions work"></img>
+					</section>					
+					<section>
+						<p>Esempi di sistemi per l'elaborazione e la pubblicazione di edizioni digitali</p>
+						<ul>
+							<li><a href="https://textualcommunities.org/app/home">Textual Communities</a></li>
+							<li><a href="https://www.elaborate.huygens.knaw.nl/login">eLaborate</a></li>
+							<li><a href="https://textgrid.de/en/web/guest">Text Grid</a></li>
+						</ul>
+					</section>
+				</section>
+
+				<!-- 4. ad hoc vs generici -->
+				<section>
+					<section>
+						<h4>2. sistemi ad hoc vs sistemi generici</h4>
+					</section>
+				</section>
+
+				<!-- 5. distributed vs self-hosted -->
+				<section>
+					<section>
+						<h4>3. distributed vs self-hosted</h4>
+					</section>
+				</section>
+
+				<!-- 6. printed-page paradigm vs visualizzazioni alternative -->
+				<section>
+					<section>
+						<h4>4. printed-page paradigm vs visualizzazioni alternative</h4>
+					</section>
+					<section>
+						<p>Esempio: 2^ edizione della <a href="https://www.dantecommedia.it/">Commedia</a> a cura di Prue Shaw</p>
+						<img src="./img/commedia_shaw_Vbase.png" alt="Screenshot of the 2nd digital edition of the 'Commedia'"></img>
+					</section>
+				</section>
+
+				<!-- 7. TEI vs non-TEI -->
+				<section>
+					<section>
+						<h4>5. TEI vs non-TEI</h4>
+					</section>
+					<section>
+						<p>Strumenti di pubblicazione creati per documenti TEI o TEI-compatible </p>
+						<ul>
+							<li><a href="http://evt.labcd.unipi.it/">Edition Visualization Technology</a></li>
+							<li><a href="https://teipublisher.com/index.html">TEI Publisher</a></li>
+							<li><a href="https://dcl.ils.indiana.edu/teibp/">TEI Boilerplate</a></li>
+							<li><a href="http://teic.github.io/CETEIcean/Balisage-CETEIcean.html">CETEIcean</a></li>
+							<li><a href="http://teicat.huma-num.fr/">TEI Critical Edition Toolbox</a></li>
+							<li><a href="http://exist-db.org/exist/apps/homepage/index.html">eXist-db</a></li>
+							<li><a href="https://tapasproject.org/">TAPAS project</a></li>
+							<li><a href="https://github.com/TEIC/Stylesheets">TEI-C Stylesheets</a></li>
+							<li><a href="https://oxgarage.tei-c.org/">OxGarage</a></li>
+						</ul>
+					</section>
+				</section>
+			
 			</div>
 		</div>
 
